tests/ui/lang/core/array/gep0.stderr
error: evaluation of constant value failed: cannot index into [u32; 0]
 --> $DIR/gep0.rs:9:9
  |
9 |         array[i] += i;
  |         ^^^^^^^^^^^^^

error: aborting due to 1 previous error

